[FIX] remove the fixed height to prevent the icons overflow when wrapped to second line (https://github.com/jitsi/jitsi-meet/issues/335#issuecomment-177516825)

--- a/css/videolayout_default.css
+++ b/css/videolayout_default.css
@@ -375,7 +375,6 @@
     margin-right:auto;
     padding-left:2px;
     padding-right:2px;
-    height:38px;
     width:auto;
     background-color: rgba(0,0,0,0.8);
     border: 1px solid rgba(256, 256, 256, 0.2);
